@@ -181,7 +181,14 @@
 
 2002-08-20
 
+	* Additions:
+	    - first cut at regexes.  Very rough, but it's fun to play
+	      with.
+	
 	* Fixes:
 	    - "f($x)" and "f $x" now behave as expected when f is declared
 	      with a prototype.
+	    - allow comma-separated expressions in "loop(;;)"
+	    - docs and tweaks for perl6 driver (Leo)
+
 	
